# blj-gitty

./: .gitignore  BUG_REPORT.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  build.bat  build.sh  shard.yml
.github/workflows/: cmake.yml
doc/: Gitty.docx  abstract.html  time_management.xlsx  update  ~$Gitty.docx  ~$time_management.xlsx  ~WRL0005.tmp
include/gitty/: gitty.h
lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake  libgit2.pc
lib/src/: Makefile  cmake_install.cmake
lib/tests/: .clarcache  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/: CMakeLists.txt  compositor.rs  gitty.h  gitty.hpp  main.c  main.cpp  main.cr  main.rs
src/gitty/: confparser.cr  display.cr  git.cr
