[package]
name = "gitty"
version = "0.1.0"
authors = ["Lian Studer <ln.studer@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.14"
termion = "1.5"
git2 = "0.13"

[features]
default = ["termion"]